metallic textures and environment

--- a/ghosts/ghosts.vcxproj
+++ b/ghosts/ghosts.vcxproj
@@ -124,12 +124,20 @@
     <ClInclude Include="transform.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="data\models\barrel\barrel.awf" />
+    <None Include="data\models\barrel\barrel.mtl" />
     <None Include="data\models\yoda\yoda-head.awf" />
     <None Include="data\models\yoda\yoda-head.mtl" />
     <None Include="data\shaders\pbr.frag" />
     <None Include="data\shaders\pbr.vert" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="data\models\barrel\Barrel_01_Color.dds" />
+    <Image Include="data\models\barrel\Barrel_01_Height.dds" />
+    <Image Include="data\models\barrel\Barrel_01_Metallic.dds" />
+    <Image Include="data\models\barrel\Barrel_01_Normal.dds" />
+    <Image Include="data\models\barrel\Barrel_01_Roughness.dds" />
+    <Image Include="data\models\barrel\Barrel_01_Shiness.dds" />
     <Image Include="data\models\yoda\body.dds" />
     <Image Include="data\models\yoda\body_b.dds" />
     <Image Include="data\models\yoda\body_s.dds" />
@@ -140,6 +148,9 @@
     <Image Include="data\models\yoda\Limbs.dds" />
     <Image Include="data\models\yoda\Limbs_b.dds" />
     <Image Include="data\models\yoda\Stick.dds" />
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="data\models\barrel\Barrel_01.obj" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
