--- a/ghosts/ghosts.vcxproj
+++ b/ghosts/ghosts.vcxproj
@@ -126,6 +126,8 @@
   <ItemGroup>
     <None Include="data\models\barrel\barrel.awf" />
     <None Include="data\models\barrel\barrel.mtl" />
+    <None Include="data\models\kungfu-panda\kungfu.awf" />
+    <None Include="data\models\kungfu-panda\kungfu.mtl" />
     <None Include="data\models\yoda\yoda-head.awf" />
     <None Include="data\models\yoda\yoda-head.mtl" />
     <None Include="data\shaders\pbr.frag" />
@@ -138,6 +140,14 @@
     <Image Include="data\models\barrel\Barrel_01_Normal.dds" />
     <Image Include="data\models\barrel\Barrel_01_Roughness.dds" />
     <Image Include="data\models\barrel\Barrel_01_Shiness.dds" />
+    <Image Include="data\models\kungfu-panda\0d0194c2.dds" />
+    <Image Include="data\models\kungfu-panda\14cd25fd.dds" />
+    <Image Include="data\models\kungfu-panda\1c72c491.dds" />
+    <Image Include="data\models\kungfu-panda\2fa75e05.dds" />
+    <Image Include="data\models\kungfu-panda\3fb1a8aa.dds" />
+    <Image Include="data\models\kungfu-panda\58fe017d.dds" />
+    <Image Include="data\models\kungfu-panda\70b79c9b.dds" />
+    <Image Include="data\models\kungfu-panda\cfd1e509.dds" />
     <Image Include="data\models\yoda\body.dds" />
     <Image Include="data\models\yoda\body_b.dds" />
     <Image Include="data\models\yoda\body_s.dds" />
