--- a/ghosts/ghosts.vcxproj.filters
+++ b/ghosts/ghosts.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="line_batcher.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ghosts.hpp">
@@ -111,6 +114,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="line_batcher.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
