--- a/ghosts/ghosts.vcxproj.filters
+++ b/ghosts/ghosts.vcxproj.filters
@@ -37,7 +37,7 @@
     <Filter Include="Resource Files\textures\ibl\cubemaps\golden-gate-bridge">
       <UniqueIdentifier>{2448c9a9-4674-4d08-bda3-6dc06f6c4a0f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Resource Files\models\panda">
+    <Filter Include="Resource Files\models\kungfu-panda">
       <UniqueIdentifier>{63197cb5-0c5f-4db5-bfa9-7767ddadc39f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -140,10 +140,10 @@
       <Filter>Resource Files\shaders</Filter>
     </None>
     <None Include="data\models\kungfu-panda\kungfu.awf">
-      <Filter>Resource Files\models\panda</Filter>
+      <Filter>Resource Files\models\kungfu-panda</Filter>
     </None>
     <None Include="data\models\kungfu-panda\kungfu.mtl">
-      <Filter>Resource Files\models\panda</Filter>
+      <Filter>Resource Files\models\kungfu-panda</Filter>
     </None>
     <None Include="data\shaders\line.frag">
       <Filter>Resource Files\shaders</Filter>
@@ -220,28 +220,28 @@
       <Filter>Resource Files\models\barrel</Filter>
     </Image>
     <Image Include="data\models\kungfu-panda\0d0194c2.dds">
-      <Filter>Resource Files\models\panda</Filter>
+      <Filter>Resource Files\models\kungfu-panda</Filter>
     </Image>
     <Image Include="data\models\kungfu-panda\1c72c491.dds">
-      <Filter>Resource Files\models\panda</Filter>
+      <Filter>Resource Files\models\kungfu-panda</Filter>
     </Image>
     <Image Include="data\models\kungfu-panda\2fa75e05.dds">
-      <Filter>Resource Files\models\panda</Filter>
+      <Filter>Resource Files\models\kungfu-panda</Filter>
     </Image>
     <Image Include="data\models\kungfu-panda\3fb1a8aa.dds">
-      <Filter>Resource Files\models\panda</Filter>
+      <Filter>Resource Files\models\kungfu-panda</Filter>
     </Image>
     <Image Include="data\models\kungfu-panda\14cd25fd.dds">
-      <Filter>Resource Files\models\panda</Filter>
+      <Filter>Resource Files\models\kungfu-panda</Filter>
     </Image>
     <Image Include="data\models\kungfu-panda\58fe017d.dds">
-      <Filter>Resource Files\models\panda</Filter>
+      <Filter>Resource Files\models\kungfu-panda</Filter>
     </Image>
     <Image Include="data\models\kungfu-panda\70b79c9b.dds">
-      <Filter>Resource Files\models\panda</Filter>
+      <Filter>Resource Files\models\kungfu-panda</Filter>
     </Image>
     <Image Include="data\models\kungfu-panda\cfd1e509.dds">
-      <Filter>Resource Files\models\panda</Filter>
+      <Filter>Resource Files\models\kungfu-panda</Filter>
     </Image>
   </ItemGroup>
 </Project>
